# moveit_task_constructor

capabilities/: CMakeLists.txt  package.xml
capabilities/src/: execute_task_solution_capability.cpp
core/: CMakeLists.txt  motion_planning_stages_plugin_description.xml
core/include/moveit/task_constructor/: container.h  task.h
core/include/moveit/task_constructor/stages/: generate_handover_pose.h  generate_place_pose.h  generate_place_pose_subframe.h  generate_pose.h  load_grasp_pose.h  pick_place.h
core/src/: container.cpp  storage.cpp  task.cpp
core/src/stages/: CMakeLists.txt  compute_ik.cpp  dummy.cpp  generate_handover_pose.cpp  generate_place_pose.cpp  generate_place_pose_subframe.cpp  generate_pose.cpp  grasp_provider_base.cpp  load_grasp_pose.cpp  place_provider_base.cpp
core/src/tasks/: pick_place_task.cpp
demo/: CMakeLists.txt  README.md
demo/config/: o2ac_config.yaml
demo/include/moveit_task_constructor_demo/: o2ac_pick_place_task.h  pick_place_task_for_action.h
demo/launch/: o2ac_demo.launch
demo/src/: modular_pick_hold.cpp  mtc_modules_server.cpp  o2ac_demo.cpp  o2ac_pick_place_task.cpp  pick_place_planning_action_server.cpp  pick_place_task_for_action.cpp  spawn_object.py
demo/test/: pick_place_test.cpp
msgs/: CMakeLists.txt
msgs/action/: PickObject.action  PickPlacePlanning.action  PickPlaceWithRegrasp.action  PlaceObject.action  ReleaseObject.action
msgs/msg/: SubTrajectory.msg
visualization/visualization_tools/src/: task_solution_visualization.cpp
